fix: button alignment read more

--- a/src/scss/components/_lead.scss
+++ b/src/scss/components/_lead.scss
@@ -25,7 +25,6 @@
 
   &__read-more {
     grid-area: lead-read-more;
-    align-self: end;
     display: inline-block;
     padding: 1rem 4rem;
     max-width: fit-content;
@@ -38,6 +37,10 @@
 
     &:hover {
       background-color: v.$very-dark-blue;
+    }
+
+    @include m.breakpoint-md() {
+      align-self: start;
     }
   }
 
